y.output
Terminals unused in grammar

   TEST
   NUMBER
   EOL
   BS


Grammar

    0 $accept: commands $end

    1 commands: builtin.cmd
    2         | external.cmd

    3 builtin.cmd: SETENV WORD WORD
    4            | SETENV WORD TEXT
    5            | PRINTENV
    6            | UNSETENV WORD
    7            | ALIAS WORD TEXT
    8            | ALIAS WORD WORD
    9            | ALIAS
   10            | UNALIAS WORD
   11            | BYE
   12            | CD WORD
   13            | CD

   14 external.cmd: ext.cmd
   15             | ext.cmd.iordr
   16             | ext.cmd.rdrerr
   17             | ext.cmd.background

   18 ext.cmd: WORD.args
   19        | pipeline

   20 WORD.args: WORD
   21          | WORD.args WORD
   22          | WORD.args TEXT

   23 pipeline: WORD.args PIPE WORD.args
   24         | pipeline PIPE WORD.args

   25 rdrerr: ERR2FILE WORD
   26       | ERR2OUT

   27 GT.opt: GT
   28       | GT2

   29 ext.cmd.iordr: ext.cmd GT.opt WORD
   30              | ext.cmd LT WORD
   31              | ext.cmd GT.opt WORD LT WORD
   32              | ext.cmd LT WORD GT.opt WORD

   33 ext.cmd.rdrerr: ext.cmd rdrerr
   34               | ext.cmd.iordr rdrerr

   35 ext.cmd.background: ext.cmd AMPERSAND
   36                   | ext.cmd.rdrerr AMPERSAND


Terminals, with rules where they appear

$end (0) 0
error (256)
WORD (258) 3 4 6 7 8 10 12 20 21 25 29 30 31 32
TEXT (259) 4 7 22
TEST (260)
SETENV (261) 3 4
PRINTENV (262) 5
UNSETENV (263) 6
CD (264) 12 13
ALIAS (265) 7 8 9
UNALIAS (266) 10
NUMBER (267)
BYE (268) 11
EOL (269)
LT (270) 30 31 32
GT (271) 27
GT2 (272) 28
PIPE (273) 23 24
BS (274)
AMPERSAND (275) 35 36
ERR2FILE (276) 25
ERR2OUT (277) 26


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
commands (24)
    on left: 1 2, on right: 0
builtin.cmd (25)
    on left: 3 4 5 6 7 8 9 10 11 12 13, on right: 1
external.cmd (26)
    on left: 14 15 16 17, on right: 2
ext.cmd (27)
    on left: 18 19, on right: 14 29 30 31 32 33 35
WORD.args (28)
    on left: 20 21 22, on right: 18 21 22 23 24
pipeline (29)
    on left: 23 24, on right: 19 24
rdrerr (30)
    on left: 25 26, on right: 33 34
GT.opt (31)
    on left: 27 28, on right: 29 31 32
ext.cmd.iordr (32)
    on left: 29 30 31 32, on right: 15 34
ext.cmd.rdrerr (33)
    on left: 33 34, on right: 16 36
ext.cmd.background (34)
    on left: 35 36, on right: 17


State 0

    0 $accept: . commands $end

    WORD      shift, and go to state 1
    SETENV    shift, and go to state 2
    PRINTENV  shift, and go to state 3
    UNSETENV  shift, and go to state 4
    CD        shift, and go to state 5
    ALIAS     shift, and go to state 6
    UNALIAS   shift, and go to state 7
    BYE       shift, and go to state 8

    commands            go to state 9
    builtin.cmd         go to state 10
    external.cmd        go to state 11
    ext.cmd             go to state 12
    WORD.args           go to state 13
    pipeline            go to state 14
    ext.cmd.iordr       go to state 15
    ext.cmd.rdrerr      go to state 16
    ext.cmd.background  go to state 17


State 1

   20 WORD.args: WORD .

    $default  reduce using rule 20 (WORD.args)


State 2

    3 builtin.cmd: SETENV . WORD WORD
    4            | SETENV . WORD TEXT

    WORD  shift, and go to state 18


State 3

    5 builtin.cmd: PRINTENV .

    $default  reduce using rule 5 (builtin.cmd)


State 4

    6 builtin.cmd: UNSETENV . WORD

    WORD  shift, and go to state 19


State 5

   12 builtin.cmd: CD . WORD
   13            | CD .

    WORD  shift, and go to state 20

    $default  reduce using rule 13 (builtin.cmd)


State 6

    7 builtin.cmd: ALIAS . WORD TEXT
    8            | ALIAS . WORD WORD
    9            | ALIAS .

    WORD  shift, and go to state 21

    $default  reduce using rule 9 (builtin.cmd)


State 7

   10 builtin.cmd: UNALIAS . WORD

    WORD  shift, and go to state 22


State 8

   11 builtin.cmd: BYE .

    $default  reduce using rule 11 (builtin.cmd)


State 9

    0 $accept: commands . $end

    $end  shift, and go to state 23


State 10

    1 commands: builtin.cmd .

    $default  reduce using rule 1 (commands)


State 11

    2 commands: external.cmd .

    $default  reduce using rule 2 (commands)


State 12

   14 external.cmd: ext.cmd .
   29 ext.cmd.iordr: ext.cmd . GT.opt WORD
   30              | ext.cmd . LT WORD
   31              | ext.cmd . GT.opt WORD LT WORD
   32              | ext.cmd . LT WORD GT.opt WORD
   33 ext.cmd.rdrerr: ext.cmd . rdrerr
   35 ext.cmd.background: ext.cmd . AMPERSAND

    LT         shift, and go to state 24
    GT         shift, and go to state 25
    GT2        shift, and go to state 26
    AMPERSAND  shift, and go to state 27
    ERR2FILE   shift, and go to state 28
    ERR2OUT    shift, and go to state 29

    $default  reduce using rule 14 (external.cmd)

    rdrerr  go to state 30
    GT.opt  go to state 31


State 13

   18 ext.cmd: WORD.args .
   21 WORD.args: WORD.args . WORD
   22          | WORD.args . TEXT
   23 pipeline: WORD.args . PIPE WORD.args

    WORD  shift, and go to state 32
    TEXT  shift, and go to state 33
    PIPE  shift, and go to state 34

    $default  reduce using rule 18 (ext.cmd)


State 14

   19 ext.cmd: pipeline .
   24 pipeline: pipeline . PIPE WORD.args

    PIPE  shift, and go to state 35

    $default  reduce using rule 19 (ext.cmd)


State 15

   15 external.cmd: ext.cmd.iordr .
   34 ext.cmd.rdrerr: ext.cmd.iordr . rdrerr

    ERR2FILE  shift, and go to state 28
    ERR2OUT   shift, and go to state 29

    $default  reduce using rule 15 (external.cmd)

    rdrerr  go to state 36


State 16

   16 external.cmd: ext.cmd.rdrerr .
   36 ext.cmd.background: ext.cmd.rdrerr . AMPERSAND

    AMPERSAND  shift, and go to state 37

    $default  reduce using rule 16 (external.cmd)


State 17

   17 external.cmd: ext.cmd.background .

    $default  reduce using rule 17 (external.cmd)


State 18

    3 builtin.cmd: SETENV WORD . WORD
    4            | SETENV WORD . TEXT

    WORD  shift, and go to state 38
    TEXT  shift, and go to state 39


State 19

    6 builtin.cmd: UNSETENV WORD .

    $default  reduce using rule 6 (builtin.cmd)


State 20

   12 builtin.cmd: CD WORD .

    $default  reduce using rule 12 (builtin.cmd)


State 21

    7 builtin.cmd: ALIAS WORD . TEXT
    8            | ALIAS WORD . WORD

    WORD  shift, and go to state 40
    TEXT  shift, and go to state 41


State 22

   10 builtin.cmd: UNALIAS WORD .

    $default  reduce using rule 10 (builtin.cmd)


State 23

    0 $accept: commands $end .

    $default  accept


State 24

   30 ext.cmd.iordr: ext.cmd LT . WORD
   32              | ext.cmd LT . WORD GT.opt WORD

    WORD  shift, and go to state 42


State 25

   27 GT.opt: GT .

    $default  reduce using rule 27 (GT.opt)


State 26

   28 GT.opt: GT2 .

    $default  reduce using rule 28 (GT.opt)


State 27

   35 ext.cmd.background: ext.cmd AMPERSAND .

    $default  reduce using rule 35 (ext.cmd.background)


State 28

   25 rdrerr: ERR2FILE . WORD

    WORD  shift, and go to state 43


State 29

   26 rdrerr: ERR2OUT .

    $default  reduce using rule 26 (rdrerr)


State 30

   33 ext.cmd.rdrerr: ext.cmd rdrerr .

    $default  reduce using rule 33 (ext.cmd.rdrerr)


State 31

   29 ext.cmd.iordr: ext.cmd GT.opt . WORD
   31              | ext.cmd GT.opt . WORD LT WORD

    WORD  shift, and go to state 44


State 32

   21 WORD.args: WORD.args WORD .

    $default  reduce using rule 21 (WORD.args)


State 33

   22 WORD.args: WORD.args TEXT .

    $default  reduce using rule 22 (WORD.args)


State 34

   23 pipeline: WORD.args PIPE . WORD.args

    WORD  shift, and go to state 1

    WORD.args  go to state 45


State 35

   24 pipeline: pipeline PIPE . WORD.args

    WORD  shift, and go to state 1

    WORD.args  go to state 46


State 36

   34 ext.cmd.rdrerr: ext.cmd.iordr rdrerr .

    $default  reduce using rule 34 (ext.cmd.rdrerr)


State 37

   36 ext.cmd.background: ext.cmd.rdrerr AMPERSAND .

    $default  reduce using rule 36 (ext.cmd.background)


State 38

    3 builtin.cmd: SETENV WORD WORD .

    $default  reduce using rule 3 (builtin.cmd)


State 39

    4 builtin.cmd: SETENV WORD TEXT .

    $default  reduce using rule 4 (builtin.cmd)


State 40

    8 builtin.cmd: ALIAS WORD WORD .

    $default  reduce using rule 8 (builtin.cmd)


State 41

    7 builtin.cmd: ALIAS WORD TEXT .

    $default  reduce using rule 7 (builtin.cmd)


State 42

   30 ext.cmd.iordr: ext.cmd LT WORD .
   32              | ext.cmd LT WORD . GT.opt WORD

    GT   shift, and go to state 25
    GT2  shift, and go to state 26

    $default  reduce using rule 30 (ext.cmd.iordr)

    GT.opt  go to state 47


State 43

   25 rdrerr: ERR2FILE WORD .

    $default  reduce using rule 25 (rdrerr)


State 44

   29 ext.cmd.iordr: ext.cmd GT.opt WORD .
   31              | ext.cmd GT.opt WORD . LT WORD

    LT  shift, and go to state 48

    $default  reduce using rule 29 (ext.cmd.iordr)


State 45

   21 WORD.args: WORD.args . WORD
   22          | WORD.args . TEXT
   23 pipeline: WORD.args PIPE WORD.args .

    WORD  shift, and go to state 32
    TEXT  shift, and go to state 33

    $default  reduce using rule 23 (pipeline)


State 46

   21 WORD.args: WORD.args . WORD
   22          | WORD.args . TEXT
   24 pipeline: pipeline PIPE WORD.args .

    WORD  shift, and go to state 32
    TEXT  shift, and go to state 33

    $default  reduce using rule 24 (pipeline)


State 47

   32 ext.cmd.iordr: ext.cmd LT WORD GT.opt . WORD

    WORD  shift, and go to state 49


State 48

   31 ext.cmd.iordr: ext.cmd GT.opt WORD LT . WORD

    WORD  shift, and go to state 50


State 49

   32 ext.cmd.iordr: ext.cmd LT WORD GT.opt WORD .

    $default  reduce using rule 32 (ext.cmd.iordr)


State 50

   31 ext.cmd.iordr: ext.cmd GT.opt WORD LT WORD .

    $default  reduce using rule 31 (ext.cmd.iordr)
